# ripple-effect

./: DEVELOP.md  PLAN.md  README.rst  SPEC.md  pyproject.toml  ripple-effect.yml  tox.ini
.github/workflows/: tests.yml
src/ripple_effect/: __init__.py  __main__.py  cli.py  config.py  model.py
tests/: conftest.py  test_cli.py
tests/samples/: incomplete.yml
